# FluxMedia

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  INSTALLATION_GUIDE.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  app.js  bandit_report.txt  bandit_report_2.txt  extract.py  fluxmedia_aio.py  fluxmedia_linux.sh  fluxmedia_windows.bat  func.py  implementation_plan.md  index.html  install.ps1  install.sh  main_source.py  mypy_report.txt  pylint_errors.txt  pylint_report.txt  pyproject.toml  repack.py  requirements.txt  ruff_report.txt  style.css  test_mock.py  test_ping.py  test_pyright.py
.agents/: AGENTS.md
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_request.md  feature_request.md
.github/workflows/: ci.yml  deploy-pages.yml  publish.yml  release.yml
docs/: architecture.md  configuration.md  contributing.md  downloader.md  faq.md  installation.md  qr-share.md  troubleshooting.md
fluxmedia/: __init__.py  main.py  tui.py
fluxmedia_lan_web/: app.js  index.html  server.py  style.css
scripts/: extract.py  repack.py
src/fluxmedia/: __init__.py  api.py  main.py  tui.py
src/fluxmedia/cli/: main.py
src/fluxmedia/core/: __init__.py
src/fluxmedia/downloader/: core.py  operations.py  utils.py
src/fluxmedia/server/: app.py
web/: index.html  package-lock.json  package.json  rewrite.py  rewrite_app.py  tailwind.config.js
web/public/: sw.js
web/src/: App.tsx  index.css  main.tsx
website/: app.js  index.html  landing.css  troubleshooting.html
(+159 files in other folders)
