[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluxmedia"
version = "1.6.16"
description = "A powerful, cross-platform media portal and processing toolkit."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "rich>=13.7.0",
    "requests>=2.31.0",
    "yt-dlp>=2025.2.18",
    "textual>=0.50.0",
    "mutagen>=1.47.0",
    "instaloader>=4.11.0",
]

[project.urls]
Homepage = "https://github.com/pdev-labs/FluxMedia-py"

[project.scripts]
fluxmedia = "fluxmedia.main:main"

[tool.setuptools]
packages = ["fluxmedia"]
include-package-data = true

